# ANOII2020

./: .clang-format  .gitignore  CMakeLists.txt
data/: test_images.txt  train_images.txt
doc/: main.tex
src/: CMakeLists.txt  alexnetsolver.cpp  alexnetsolver.h  cannysolver.cpp  cannysolver.h  combinedsolver.cpp  combinedsolver.h  cvnetcfg.h  detectorinputset.cpp  detectorinputset.h  dlibnetcfg.h  hogsolver.cpp  hogsolver.h  inputset.cpp  inputset.h  main.cpp  netcfg.h  netdef.h  solver.cpp  solver.h  solvescore.h  space.h  tester.cpp  trainedcvsolver.cpp  trainedcvsolver.h  traineddlibsolver.cpp  traineddlibsolver.h  traineddlibsolver.tpp  trainedsolver.cpp  trainedsolver.h  trainedsolver.tpp  traininputset.cpp  traininputset.h
